--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="my">
-<head>
+<head><meta property="og:title" content="Dr. Thu Zar Clinic" />
+<meta property="og:description" content="Official Website" />
+<meta property="og:image" content="https://doctorthuzarclinic.github.io/doctorthuzar/logo.png" />
+<meta property="og:url" content="https://doctorthuzarclinic.github.io/doctorthuzar/" />
+
+<link rel="icon" href="logo.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dr. Thu Zar</title>
